Fixing SidebarMobileControls spacing

--- a/src/components/sidebar/components/sidebar-mobile-controls/sidebar-mobile-controls.module.css
+++ b/src/components/sidebar/components/sidebar-mobile-controls/sidebar-mobile-controls.module.css
@@ -2,7 +2,7 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
 }
 
 .backButton {
